// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index renders correctly with greeting 1`] = `
<div>
  <button
    className="button"
    onClick={[Function]}
  >
    Navigate to other page
  </button>
  <button
    className="button"
    onClick={[Function]}
  >
    Toggle greeting
  </button>
  <button
    className="button"
    onClick={[Function]}
  >
    Fetch 2 random users
  </button>
  <h1>
    Hello world!
  </h1>
</div>
`;

exports[`Index renders correctly with users 1`] = `
<div>
  <button
    className="button"
    onClick={[Function]}
  >
    Navigate to other page
  </button>
  <button
    className="button"
    onClick={[Function]}
  >
    Toggle greeting
  </button>
  <button
    className="button"
    onClick={[Function]}
  >
    Fetch 2 random users
  </button>
  <div>
    <p>
      User 
      1
      : 
      foo.bar@example.com
    </p>
    <p>
      User 
      2
      : 
      bar.foo@example.com
    </p>
  </div>
</div>
`;

exports[`Index renders correctly without greeting 1`] = `
<div>
  <button
    className="button"
    onClick={[Function]}
  >
    Navigate to other page
  </button>
  <button
    className="button"
    onClick={[Function]}
  >
    Toggle greeting
  </button>
  <button
    className="button"
    onClick={[Function]}
  >
    Fetch 2 random users
  </button>
</div>
`;
